Lesson 8: Add products and attributes (api & web) (#11)
